@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-10-24 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Fix shutdown issue with service restarts and cloudi_pool errors
+
 2013-10-23 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix a potential inconsistency between the CloudI repo and the
